Dear ImGui Test Engine
CHANGELOG

** Test Engine is regularly updated to support recent Dear ImGui version, when a change is required.
   Those changes are not all listed here.
** For a while this is going to ONLY INCLUDE BREAKING CHANGES.

2024/09/17:
- TestEngine: opening source file default to use shell open if io.SrcFileOpenFunc is not set. (#56)
- TestEngine: UI: opening source file prints filename/line_no in debug output to facilitate
  double-clicking in IDE. (#56) [@learn-more]

2024/09/16:
- TestEngine: Added ViewportPlatform_SetWindowPos() and ViewportPlatform_SetWindowSize()
  functions to enforce or simulate platform move/resize.

2024/09/12:
- TestEngine: fixed a crash when item/window stops being submitted (or test is aborted)
  in the middle of a MouseMove() action performing a long scroll.

2024/09/10:
- TestEngine: CaptureTool: rename ImGuiCaptureFlags_IncludeTooltipsAndPopups to
  ImGuiCaptureFlags_IncludePopups, as tooltips are always included by default in the capture.

2024/08/22
- TestEngine: fixes for internal changes and ImGuiPlatformIO use in 1.91.1 WIP.

2024/07/08:
- TestEngine: fixes an issue browsing menus inside a popup not inside a menu-bar. (#43) [@peterigz]

2024/07/02:
- TestEngine: fixes for 1.91.0 WIP changes.

2024/07/01:
- TestEngine: added helper IM_CHECK_FLOAT_NE_EPS() macro.

2024/06/06:
- TestEngine: WindowInfo() with ImGuiTestOpFlags_NoError doesn't spew error
  messages in log. (#52)

2024/06/04:
- TestEngine: UI: Added "Capture on error" checkbox to top bar.
- TestEngine: UI: Reworded "Refocus" to "KeepFocus" (inverted value) in top bar
  for consistency with other options.

2024/05/29:
- TestEngine: UI: Hovering 0xXXXXXXXX identifiers in test log attempts
  to visually locate them and provide options to Debug Break in the call
  emitting this item, similar to Dear ImGui Debug Log window.
  (require latest Dear ImGui version).
- TestEngine: Improved/standardized display of ImGuiTestRef in log.